Fixed an issue with Java9+ builds. Re-ordered the POM a bit. Added "EnableBatchRelease: true" to ci.yml